# o-charts_pi

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  Plugin.cmake  README.md  VERSION.cmake  appveyor.yml  crowdin.yaml  docker-script-bionic-armhf.sh  docker-script-raspbian.sh  o-charts-plugin.xml.in  plugin.xml.in  update-templates
.circleci/: config.yml
build-deps/: control  control-raspbian
buildandroid/oeserverda_arm/: oexserverda
buildlinux64/oeserverd/: oexserverd
buildlinuxarm/oeserverd/: oexserverd
buildlinuxarm64/oeserverd/: oexserverd
buildosx/InstallOSX/: o-charts_pi.pkgproj.in
buildosx/oeserverd/: oexserverd
buildwin/: win_deps.bat
ci/: appveyor.bat  circleci-build-android.sh  circleci-build-bionic-armhf.sh  circleci-build-buster-armhf.sh  circleci-build-debian-armhf.sh  circleci-build-debian-armxx.sh  circleci-build-debian-docker.sh  circleci-build-debian-gtk3.sh  circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-focal-armhf.sh  circleci-build-macos.sh  circleci-build-raspbian-arm64.sh  circleci-build-raspbian-armhf-buster.sh  circleci-build-raspbian-armhf.sh  circleci-upload.sh  circleci-upload_arm.sh  circleci-upload_arm64.sh  flatpak-22.08-glew.patch  generic-build-raspbian-armhf.sh  maybe-push-upload.sh  travis-build-raspbian-armhf-buster.sh  travis-build-raspbian-armhf.sh  travis-build-ubuntu-arm64.sh
cmake/: AndroidLibs.cmake  Metadata.cmake  PluginCompiler.cmake  PluginConfigure.cmake  PluginInstall.cmake  PluginLibs.cmake  PluginLocalization.cmake  PluginOptions.cmake  PluginPackage.cmake  PluginSetup.cmake  Targets.cmake  TemplateVersion
data/: LUPPatch4.xml  SymbolPatch6.xml
flatpak/: Makefile  oexserverd  org.opencpn.OpenCPN.Plugin.o-charts.yaml
includeAndroid/GL/: gl_private.h  glu.h
libs/WindowsHeaders/: CMakeLists.txt
libs/cpl/: CMakeLists.txt
libs/dsa/: CMakeLists.txt
libs/flatpak/: libusb-compat-0.1.yaml
libs/geoprim/: CMakeLists.txt
libs/geoprim/src/: .directory  LLRegion.cpp  LOD_reduce.h  poly_math.cpp  poly_math.h  vector2D.cpp  vector2D.h
libs/glew/: CMakeLists.txt  README.md
libs/glew/patches/: 0001-cmake-Update-ancient-required-version.patch  0002-build-cmake-windows-Don-t-install-pdb-file-on-static.patch
libs/iso8211/: CMakeLists.txt
libs/jsoncpp/: CMakeLists.txt
libs/oeserverd/: CMakeLists.txt
libs/oeserverd/linux64/: oexserverd
libs/oeserverd/linuxarm/: oexserverd
libs/oeserverd/linuxarm64/: oexserverd
libs/oeserverd/oeserverd_android/arm32/: oexserverd
libs/oeserverd/oeserverda_android/: oexserverd
libs/oeserverd/oeserverda_android/arm32/: oexserverd
libs/oeserverd/oeserverda_android/arm64/: oexserverd
libs/oeserverd/osx/: libsglmac-2.38.0.0.dylib.arm64  oexserverd
libs/opencpn-glu/: CMakeLists.txt
libs/plugingl/: CMakeLists.txt
libs/plugingl/include/: qtstylesheet.h
libs/plugingl/src/: TexFont.cpp  qtstylesheet.cpp
libs/pugixml/: CMakeLists.txt
libs/s52plib/: CMakeLists.txt
libs/s52plib/src/: Cs52_shaders.h  DepthFont.cpp  DepthFont.h  TexFont.cpp  chartsymbols.cpp  chartsymbols.h  mygeom.h  mygeomOC.cpp  s52cnsy.cpp  s52plib.cpp  s52plib.h  s52plibGL.h  s52s57.h  s52shaders.h  shaders.h
libs/tinyxml/: CMakeLists.txt
libs/wxJSON/: CMakeLists.txt
libs/wxcurl/: CMakeLists.txt
libs/zlib/: CMakeLists.txt
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  aa_ER.po  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  o-charts_pi.pot  o-charts_pi.pot.dummy  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  zh_TW.po
src/: ._s52plib.cpp  DepthFont.cpp  LLRegion.cpp  LLRegion.h  Osenc.cpp  Osenc.h  TexFont.cpp  WinJobObj.h  androidDeviceSupport.c  androidSupport.cpp  androidSupport.h  bbox.cpp  bbox.h  chart.cpp  chart.h  chartsymbols.cpp  chartsymbols.h  cutil.cpp  cutil.h  dychart.h  eSENCChart.cpp  eSENCChart.h  fpr.cpp  fpr.h  georef.cpp  mygeom63.cpp  o-charts_pi.cpp  o-charts_pi.h  ochartShop.cpp  ochartShop.h  ocpn_types.h  oernc_inStream.cpp  oernc_inStream.h  piScreenLog.cpp  piScreenLog.h  pi_DepthFont.cpp  s52plib.cpp  s52plib.h  s52s57.h  sha256.c  (+9 more)
src/tpm/: tpmUtil.cpp  tpmUtil.h
